--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Labo_2/output/Triangles/Triangle5/100_Triangle5.jpg
 Labo_2/output/Triangles/Triangle5/101_Triangle5.jpg
 Labo_2/output/Triangles/Triangle5/102_Triangle5.jpg
 Labo_2/output/Triangles/Triangle5/103_Triangle5.jpg
+
+Labo_2/src/model/__pycache__/
